# medisa

./: .gitignore  README.md
medibak/: app.py  config.py  pyproject.toml
mediui/: package-lock.json  package.json
mediui/src/: App.css  App.tsx
mediui/src/components/: ErrorContext.tsx  MediaPlayer.tsx  Podcast.tsx  Podcasts.tsx
