[tool.poetry]
name = "medibak"
version = "0.1.0"
description = "Medisa backend"
authors = ["Omid"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
